--- a/OnlineShop/Client/Shared/AppStateViewer.razor
+++ b/OnlineShop/Client/Shared/AppStateViewer.razor
@@ -1,6 +1,5 @@
 ﻿@using OnlineShop.Client.Services.State
 @inject IDialogService _dialogService
-@inject AppState _appState
 
 <span class="infoButton">
     <MudIconButton Icon="@Icons.Material.Filled.Info" Color="Color.Secondary" OnClick="DisplayState" Size="Size.Large"/>
@@ -8,9 +7,12 @@
 
 @code {
 
+    [CascadingParameter(Name = "AppState")]
+    public AppState AppState { get; set; }
+
     private void DisplayState()
     {
-        _dialogService.ShowMessageBox("State", _appState.UserState.ToString());
+        _dialogService.ShowMessageBox("State", AppState.UserState.ToString());
     }
 
 }
