--- a/OnlineShop/Client/Pages/Profile/Profile.razor
+++ b/OnlineShop/Client/Pages/Profile/Profile.razor
@@ -8,10 +8,10 @@
 <h3>Profile</h3>
 <MudText>User: @AppState.UserState.UserName</MudText>
 <MudTabs Outlined="true" Position="Position.Top" Rounded="true" Border="true" ApplyEffectsToContainer="true" Class="mt-8" PanelClass="pa-6">
-    <MudTabPanel Text="Покупки" Icon="@Icons.Material.Filled.ShoppingCart">
+    <MudTabPanel Text="История покупок" Icon="@Icons.Material.Filled.ShoppingCart">
         <PurchaseView Purchases="Purchases"></PurchaseView>
     </MudTabPanel>
-    <MudTabPanel Text="Сохраненные рисунки" Icon="@Icons.Material.Filled.Image">
+    <MudTabPanel Text="Галерея" Icon="@Icons.Material.Filled.Image">
         <ImagesView Images="Images"></ImagesView>
     </MudTabPanel>
 </MudTabs>
