--- a/OnlineShop/Client/Pages/Main/GoodItem.razor
+++ b/OnlineShop/Client/Pages/Main/GoodItem.razor
@@ -5,7 +5,7 @@
 
         </MudItem>
         <MudItem lg="2" xs="4" Class="d-flex justify-end align-center pa-auto">
-            <MudButton Variant="Variant.Filled" EndIcon="@Icons.Filled.AddShoppingCart" Color="Color.Primary" @onclick="OnBuy" Size="Size.Medium">@Price</MudButton>
+            <MudButton Variant="Variant.Filled" EndIcon="@Icons.Filled.AddShoppingCart" Color="Color.Primary" @onclick="OnBuy" Size="Size.Medium">@Price ₽</MudButton>
         </MudItem>
     </MudGrid>
 </MudPaper>
