--- a/OnlineShop/Client/Shared/NotFoundPage.razor
+++ b/OnlineShop/Client/Shared/NotFoundPage.razor
@@ -1,9 +1,8 @@
 ﻿@layout LayoutView
-<div class="background"></div>
 <main>
     <div>
         <h1 class="error">404</h1>
         <br/>
-        <h3 class="error">Oops. The page can't be found!</h3>
+        <h3 class="error">Страница не найдена</h3>
     </div>
 </main>
