--- a/OnlineShop/Client/Shared/NotFoundPage.razor.css
+++ b/OnlineShop/Client/Shared/NotFoundPage.razor.css
@@ -1,6 +1,5 @@
 ﻿.background {
     z-index: -1;
-    background: url("/static/images/halloween.jpg") repeat;
     background-size: 40%;
     height: 100vh;
     width: 100vw;
@@ -22,10 +21,6 @@ h1 {
     text-align: center;
 }
 
-h1.error {
-    text-shadow: -4px -4px 0 #ffe95e, 4px -4px 0 #ffe95e, -4px 4px 0 #ffe95e, 4px 4px 0 #ffe95e;
-}
-
 h2 {
     font-size: xx-large;
     text-align: center;
@@ -38,6 +33,5 @@ h3 {
 
 .error {
     font-family: 'Exo 2', sans-serif;
-    color: #822314;
-    text-shadow: -1px -1px 0 #ffe95e, 1px -1px 0 #ffe95e, -1px 1px 0 #ffe95e, 1px 1px 0 #ffe95e;
+    color: #8D44F2;
 }
