--- a/OnlineShop/Client/Pages/Admin/Admin.razor
+++ b/OnlineShop/Client/Pages/Admin/Admin.razor
@@ -1,30 +1,33 @@
-﻿@using OnlineShop.Client.Services.State
-@using Microsoft.AspNetCore.Components
-@inject HttpClient client
+﻿@using Microsoft.AspNetCore.Components
+@using OnlineShop.Client.Services
+@inject BrowserAPI _browserApi
+
 @page "/admin"
 
 <MudTabs Outlined="true" Position="Position.Top" Rounded="true" Border="true" ApplyEffectsToContainer="true" Class="mt-8" PanelClass="pa-6">
     <MudTabPanel Text="Статистика" Icon="@Icons.Material.Filled.BarChart">
-        <MudPaper Class="ma-4">
-            <Print Id="barChart" @ref="@printer">
-                <MudText Typo="Typo.h4">Статистика по покупкам</MudText>
-                <StatisticBarChart dataSource="api/Operations/GetStatistics"></StatisticBarChart>
-                <br>
-                <MudText Typo="Typo.h4">Статистика по загруженным изображениям</MudText>
-                <StatisticBarChart dataSource="api/Image/GetStatistics"></StatisticBarChart>
+        <MudPaper Class="ma-4 print-content">
+            <Print>
+                <PrintBody>
+                    <MudText Typo="Typo.h4">Статистика по покупкам</MudText>
+                    <StatisticBarChart dataSource="api/Operations/GetStatistics"></StatisticBarChart>
+                    <br>
+                    <MudText Typo="Typo.h4">Статистика по загруженным изображениям</MudText>
+                    <StatisticBarChart dataSource="api/Image/GetStatistics"></StatisticBarChart>
+                </PrintBody>
+                <HideFooter>
+                    <MudButton @onclick="PrintPage" Variant="Variant.Outlined" Color="Color.Info" Size="Size.Large">Print</MudButton>
+                </HideFooter>
             </Print>
         </MudPaper>
     </MudTabPanel>
 </MudTabs>
-<MudButton @onclick="PrintPage" Variant="Variant.Outlined" Color="Color.Info" Size="Size.Large">Print</MudButton>
 
 @code {
 
-    Print printer { get; set; }
-
     private async Task PrintPage()
     {
-        await printer.PrintDialog();
+        await _browserApi.PrintPageDialog();
     }
 
 }
