--- a/OnlineShop/Client/Pages/Profile/Profile.razor
+++ b/OnlineShop/Client/Pages/Profile/Profile.razor
@@ -9,10 +9,10 @@
 <MudText>Имя пользователя: @AppState.UserState.UserName</MudText>
 <MudTabs Outlined="true" Position="Position.Top" Rounded="true" Border="true" ApplyEffectsToContainer="true" Class="mt-8" PanelClass="pa-6">
     <MudTabPanel Text="История покупок" Icon="@Icons.Material.Filled.ShoppingCart">
-        <Print Id="barChart" @ref="@printer">
+        <Print>
             <PurchaseView Purchases="Purchases"></PurchaseView>
         </Print>
-        <MudButton OnClick="()=> printer.PrintDialog()">Печать</MudButton>
+        <MudButton>Печать</MudButton>
     </MudTabPanel>
     <MudTabPanel Text="Галерея" Icon="@Icons.Material.Filled.Image">
         <ImagesView Images="Images"></ImagesView>
@@ -24,7 +24,6 @@
     [CascadingParameter(Name = "AppState")]
     public AppState AppState { get; set; }
 
-    private Print printer;
     public UserImage[] Images;
     public PurchaseGoods[] Purchases;
 
