--- a/OnlineShop/Client/Pages/Admin/Admin.razor
+++ b/OnlineShop/Client/Pages/Admin/Admin.razor
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Components
-@using OnlineShop.Client.Services
+﻿@using OnlineShop.Client.Services
 @inject BrowserAPI _browserApi
 
 @page "/admin"
