--- a/OnlineShop/Client/wwwroot/css/app.css
+++ b/OnlineShop/Client/wwwroot/css/app.css
@@ -40,6 +40,7 @@ a, .btn-link {
         background-color: white;
         height: 100%;
         width: 100%;
+        overflow: scroll;
         position: fixed;
         top: 0;
         left: 0;
