last fixes for static files and db

--- a/OnlineShop/Client/Pages/Profile/ImageItem.razor
+++ b/OnlineShop/Client/Pages/Profile/ImageItem.razor
@@ -16,6 +16,7 @@
     }
     <MudText>Палитра: @colorPalette.Name</MudText>
     <MudText>Размер рамки: @imageSize.Name</MudText>
+    <MudText>Дата добавления: @image.Date</MudText>
 </MudCard>
 
 @code {
